[build-system]
requires = ["setuptools", "Cython>=0.29.33", "setuptools_scm", "numpy>=2.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wordcloud"
authors = [{ name = "Andreas Mueller", email = "t3kcit+wordcloud@gmail.com" }]
description = "A little word cloud generator"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = ["numpy>=1.19.3", "pillow", "matplotlib"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/amueller/word_cloud"

[project.scripts]
wordcloud_cli = "wordcloud.__main__:main"

[tool.setuptools]
packages = ["wordcloud"]

[tool.setuptools_scm]
write_to = "wordcloud/_version.py"
